compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    APPLY
    AUTHOR
    FOR
    GREATER
    GREATER_EQUALS
    GROUP
    INDEX
    LINE
    LOWER
    LOWER_EQUALS
    NUMBER
    PIECE
    QUOTES
    TEMPO
    TIME_SIGNATURE
    TIME_SIGNATURE_VALUE
    TITLE

Grammar

Rule 0     S' -> create_bar
Rule 1     sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET
Rule 2     sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER
Rule 3     create_bar -> CREATE BAR COLON_SIGN after_create_bar
Rule 4     after_create_bar -> empty
Rule 5     after_create_bar -> TAB sounds_list
Rule 6     after_create_bar -> TAB sounds_list after_create_bar
Rule 7     tabb -> sounds_list
Rule 8     sounds -> sound
Rule 9     sounds -> rest
Rule 10    sounds -> sound SEPARATOR sounds
Rule 11    sounds -> rest SEPARATOR sounds
Rule 12    sound -> LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET
Rule 13    rest -> LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET
Rule 14    expression_for_sound -> SOUND_NAME additionals_for_sound
Rule 15    expression_for_rest -> REST additionals_for_rest
Rule 16    additionals_for_sound -> empty
Rule 17    additionals_for_sound -> SEPARATOR SOUND_DURATION additionals_for_sound
Rule 18    additionals_for_sound -> SEPARATOR CLEF CLEF_VALUE additionals_for_sound
Rule 19    additionals_for_sound -> SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
Rule 20    additionals_for_sound -> SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
Rule 21    additionals_for_sound -> SEPARATOR LYRICS EQUALS STRING additionals_for_sound
Rule 22    additionals_for_sound -> SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
Rule 23    additionals_for_sound -> SEPARATOR KEY KEY_VALUE additionals_for_sound
Rule 24    additionals_for_rest -> empty
Rule 25    additionals_for_rest -> SEPARATOR SOUND_DURATION additionals_for_sound
Rule 26    additionals_for_rest -> SEPARATOR CLEF CLEF_VALUE additionals_for_sound
Rule 27    additionals_for_rest -> SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
Rule 28    additionals_for_rest -> SEPARATOR KEY KEY_VALUE additionals_for_sound
Rule 29    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
APPLY                : 
ARTICULATION         : 19
ARTICULATION_VALUE   : 19
AUTHOR               : 
BAR                  : 3
CLEF                 : 18 26
CLEF_VALUE           : 18 26
COLON_SIGN           : 3
CREATE               : 3
DESCRIPTION          : 22 27
DYNAMICS             : 20
DYNAMICS_VALUE       : 20
EQUALS               : 21 22 27
FOR                  : 
GREATER              : 
GREATER_EQUALS       : 
GROUP                : 
INDEX                : 
ITERATION_NUMBER     : 2
KEY                  : 23 28
KEY_VALUE            : 23 28
LEFT_CURLY_BRACKET   : 12 13
LEFT_SQUARE_BRACKET  : 1 2
LINE                 : 
LOWER                : 
LOWER_EQUALS         : 
LYRICS               : 21
NUMBER               : 
PIECE                : 
QUOTES               : 
REPEAT               : 2
REST                 : 15
RIGHT_CURLY_BRACKET  : 12 13
RIGHT_SQUARE_BRACKET : 1 2
SEPARATOR            : 10 11 17 18 19 20 21 22 23 25 26 27 28
SOUND_DURATION       : 17 25
SOUND_NAME           : 14
STRING               : 21 22 27
TAB                  : 5 6
TEMPO                : 
TIME_SIGNATURE       : 
TIME_SIGNATURE_VALUE : 
TITLE                : 
error                : 

Nonterminals, with rules where they appear

additionals_for_rest : 15
additionals_for_sound : 14 17 18 19 20 21 22 23 25 26 27 28
after_create_bar     : 3 6
create_bar           : 0
empty                : 4 16 24
expression_for_rest  : 13
expression_for_sound : 12
rest                 : 9 11
sound                : 8 10
sounds               : 1 2 10 11
sounds_list          : 5 6 7
tabb                 : 

Parsing method: LALR

state 0

    (0) S' -> . create_bar
    (3) create_bar -> . CREATE BAR COLON_SIGN after_create_bar

    CREATE          shift and go to state 2

    create_bar                     shift and go to state 1

state 1

    (0) S' -> create_bar .



state 2

    (3) create_bar -> CREATE . BAR COLON_SIGN after_create_bar

    BAR             shift and go to state 3


state 3

    (3) create_bar -> CREATE BAR . COLON_SIGN after_create_bar

    COLON_SIGN      shift and go to state 4


state 4

    (3) create_bar -> CREATE BAR COLON_SIGN . after_create_bar
    (4) after_create_bar -> . empty
    (5) after_create_bar -> . TAB sounds_list
    (6) after_create_bar -> . TAB sounds_list after_create_bar
    (29) empty -> .

    TAB             shift and go to state 7
    $end            reduce using rule 29 (empty -> .)

    after_create_bar               shift and go to state 5
    empty                          shift and go to state 6

state 5

    (3) create_bar -> CREATE BAR COLON_SIGN after_create_bar .

    $end            reduce using rule 3 (create_bar -> CREATE BAR COLON_SIGN after_create_bar .)


state 6

    (4) after_create_bar -> empty .

    $end            reduce using rule 4 (after_create_bar -> empty .)


state 7

    (5) after_create_bar -> TAB . sounds_list
    (6) after_create_bar -> TAB . sounds_list after_create_bar
    (1) sounds_list -> . LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET
    (2) sounds_list -> . LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER

    LEFT_SQUARE_BRACKET shift and go to state 9

    sounds_list                    shift and go to state 8

state 8

    (5) after_create_bar -> TAB sounds_list .
    (6) after_create_bar -> TAB sounds_list . after_create_bar
    (4) after_create_bar -> . empty
    (5) after_create_bar -> . TAB sounds_list
    (6) after_create_bar -> . TAB sounds_list after_create_bar
    (29) empty -> .

  ! reduce/reduce conflict for $end resolved using rule 5 (after_create_bar -> TAB sounds_list .)
    $end            reduce using rule 5 (after_create_bar -> TAB sounds_list .)
    TAB             shift and go to state 7

  ! $end            [ reduce using rule 29 (empty -> .) ]

    after_create_bar               shift and go to state 10
    empty                          shift and go to state 6

state 9

    (1) sounds_list -> LEFT_SQUARE_BRACKET . sounds RIGHT_SQUARE_BRACKET
    (2) sounds_list -> LEFT_SQUARE_BRACKET . sounds RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER
    (8) sounds -> . sound
    (9) sounds -> . rest
    (10) sounds -> . sound SEPARATOR sounds
    (11) sounds -> . rest SEPARATOR sounds
    (12) sound -> . LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET
    (13) rest -> . LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET shift and go to state 14

    sounds                         shift and go to state 11
    sound                          shift and go to state 12
    rest                           shift and go to state 13

state 10

    (6) after_create_bar -> TAB sounds_list after_create_bar .

    $end            reduce using rule 6 (after_create_bar -> TAB sounds_list after_create_bar .)


state 11

    (1) sounds_list -> LEFT_SQUARE_BRACKET sounds . RIGHT_SQUARE_BRACKET
    (2) sounds_list -> LEFT_SQUARE_BRACKET sounds . RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER

    RIGHT_SQUARE_BRACKET shift and go to state 15


state 12

    (8) sounds -> sound .
    (10) sounds -> sound . SEPARATOR sounds

    RIGHT_SQUARE_BRACKET reduce using rule 8 (sounds -> sound .)
    SEPARATOR       shift and go to state 16


state 13

    (9) sounds -> rest .
    (11) sounds -> rest . SEPARATOR sounds

    RIGHT_SQUARE_BRACKET reduce using rule 9 (sounds -> rest .)
    SEPARATOR       shift and go to state 17


state 14

    (12) sound -> LEFT_CURLY_BRACKET . expression_for_sound RIGHT_CURLY_BRACKET
    (13) rest -> LEFT_CURLY_BRACKET . expression_for_rest RIGHT_CURLY_BRACKET
    (14) expression_for_sound -> . SOUND_NAME additionals_for_sound
    (15) expression_for_rest -> . REST additionals_for_rest

    SOUND_NAME      shift and go to state 20
    REST            shift and go to state 21

    expression_for_sound           shift and go to state 18
    expression_for_rest            shift and go to state 19

state 15

    (1) sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET .
    (2) sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET . REPEAT ITERATION_NUMBER

    TAB             reduce using rule 1 (sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET .)
    $end            reduce using rule 1 (sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET .)
    REPEAT          shift and go to state 22


state 16

    (10) sounds -> sound SEPARATOR . sounds
    (8) sounds -> . sound
    (9) sounds -> . rest
    (10) sounds -> . sound SEPARATOR sounds
    (11) sounds -> . rest SEPARATOR sounds
    (12) sound -> . LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET
    (13) rest -> . LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET shift and go to state 14

    sound                          shift and go to state 12
    sounds                         shift and go to state 23
    rest                           shift and go to state 13

state 17

    (11) sounds -> rest SEPARATOR . sounds
    (8) sounds -> . sound
    (9) sounds -> . rest
    (10) sounds -> . sound SEPARATOR sounds
    (11) sounds -> . rest SEPARATOR sounds
    (12) sound -> . LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET
    (13) rest -> . LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET shift and go to state 14

    rest                           shift and go to state 13
    sounds                         shift and go to state 24
    sound                          shift and go to state 12

state 18

    (12) sound -> LEFT_CURLY_BRACKET expression_for_sound . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET shift and go to state 25


state 19

    (13) rest -> LEFT_CURLY_BRACKET expression_for_rest . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET shift and go to state 26


state 20

    (14) expression_for_sound -> SOUND_NAME . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 27
    empty                          shift and go to state 28

state 21

    (15) expression_for_rest -> REST . additionals_for_rest
    (24) additionals_for_rest -> . empty
    (25) additionals_for_rest -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (26) additionals_for_rest -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (27) additionals_for_rest -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (28) additionals_for_rest -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 32
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_rest           shift and go to state 30
    empty                          shift and go to state 31

state 22

    (2) sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET REPEAT . ITERATION_NUMBER

    ITERATION_NUMBER shift and go to state 33


state 23

    (10) sounds -> sound SEPARATOR sounds .

    RIGHT_SQUARE_BRACKET reduce using rule 10 (sounds -> sound SEPARATOR sounds .)


state 24

    (11) sounds -> rest SEPARATOR sounds .

    RIGHT_SQUARE_BRACKET reduce using rule 11 (sounds -> rest SEPARATOR sounds .)


state 25

    (12) sound -> LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET .

    SEPARATOR       reduce using rule 12 (sound -> LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET .)
    RIGHT_SQUARE_BRACKET reduce using rule 12 (sound -> LEFT_CURLY_BRACKET expression_for_sound RIGHT_CURLY_BRACKET .)


state 26

    (13) rest -> LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET .

    SEPARATOR       reduce using rule 13 (rest -> LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET .)
    RIGHT_SQUARE_BRACKET reduce using rule 13 (rest -> LEFT_CURLY_BRACKET expression_for_rest RIGHT_CURLY_BRACKET .)


state 27

    (14) expression_for_sound -> SOUND_NAME additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 14 (expression_for_sound -> SOUND_NAME additionals_for_sound .)


state 28

    (16) additionals_for_sound -> empty .

    RIGHT_CURLY_BRACKET reduce using rule 16 (additionals_for_sound -> empty .)


state 29

    (17) additionals_for_sound -> SEPARATOR . SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> SEPARATOR . CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> SEPARATOR . ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> SEPARATOR . DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> SEPARATOR . LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> SEPARATOR . DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> SEPARATOR . KEY KEY_VALUE additionals_for_sound

    SOUND_DURATION  shift and go to state 34
    CLEF            shift and go to state 35
    ARTICULATION    shift and go to state 36
    DYNAMICS        shift and go to state 37
    LYRICS          shift and go to state 38
    DESCRIPTION     shift and go to state 39
    KEY             shift and go to state 40


state 30

    (15) expression_for_rest -> REST additionals_for_rest .

    RIGHT_CURLY_BRACKET reduce using rule 15 (expression_for_rest -> REST additionals_for_rest .)


state 31

    (24) additionals_for_rest -> empty .

    RIGHT_CURLY_BRACKET reduce using rule 24 (additionals_for_rest -> empty .)


state 32

    (25) additionals_for_rest -> SEPARATOR . SOUND_DURATION additionals_for_sound
    (26) additionals_for_rest -> SEPARATOR . CLEF CLEF_VALUE additionals_for_sound
    (27) additionals_for_rest -> SEPARATOR . DESCRIPTION EQUALS STRING additionals_for_sound
    (28) additionals_for_rest -> SEPARATOR . KEY KEY_VALUE additionals_for_sound

    SOUND_DURATION  shift and go to state 41
    CLEF            shift and go to state 42
    DESCRIPTION     shift and go to state 43
    KEY             shift and go to state 44


state 33

    (2) sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER .

    TAB             reduce using rule 2 (sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER .)
    $end            reduce using rule 2 (sounds_list -> LEFT_SQUARE_BRACKET sounds RIGHT_SQUARE_BRACKET REPEAT ITERATION_NUMBER .)


state 34

    (17) additionals_for_sound -> SEPARATOR SOUND_DURATION . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 45
    empty                          shift and go to state 28

state 35

    (18) additionals_for_sound -> SEPARATOR CLEF . CLEF_VALUE additionals_for_sound

    CLEF_VALUE      shift and go to state 46


state 36

    (19) additionals_for_sound -> SEPARATOR ARTICULATION . ARTICULATION_VALUE additionals_for_sound

    ARTICULATION_VALUE shift and go to state 47


state 37

    (20) additionals_for_sound -> SEPARATOR DYNAMICS . DYNAMICS_VALUE additionals_for_sound

    DYNAMICS_VALUE  shift and go to state 48


state 38

    (21) additionals_for_sound -> SEPARATOR LYRICS . EQUALS STRING additionals_for_sound

    EQUALS          shift and go to state 49


state 39

    (22) additionals_for_sound -> SEPARATOR DESCRIPTION . EQUALS STRING additionals_for_sound

    EQUALS          shift and go to state 50


state 40

    (23) additionals_for_sound -> SEPARATOR KEY . KEY_VALUE additionals_for_sound

    KEY_VALUE       shift and go to state 51


state 41

    (25) additionals_for_rest -> SEPARATOR SOUND_DURATION . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 52
    empty                          shift and go to state 28

state 42

    (26) additionals_for_rest -> SEPARATOR CLEF . CLEF_VALUE additionals_for_sound

    CLEF_VALUE      shift and go to state 53


state 43

    (27) additionals_for_rest -> SEPARATOR DESCRIPTION . EQUALS STRING additionals_for_sound

    EQUALS          shift and go to state 54


state 44

    (28) additionals_for_rest -> SEPARATOR KEY . KEY_VALUE additionals_for_sound

    KEY_VALUE       shift and go to state 55


state 45

    (17) additionals_for_sound -> SEPARATOR SOUND_DURATION additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 17 (additionals_for_sound -> SEPARATOR SOUND_DURATION additionals_for_sound .)


state 46

    (18) additionals_for_sound -> SEPARATOR CLEF CLEF_VALUE . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 56
    empty                          shift and go to state 28

state 47

    (19) additionals_for_sound -> SEPARATOR ARTICULATION ARTICULATION_VALUE . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 57
    empty                          shift and go to state 28

state 48

    (20) additionals_for_sound -> SEPARATOR DYNAMICS DYNAMICS_VALUE . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 58
    empty                          shift and go to state 28

state 49

    (21) additionals_for_sound -> SEPARATOR LYRICS EQUALS . STRING additionals_for_sound

    STRING          shift and go to state 59


state 50

    (22) additionals_for_sound -> SEPARATOR DESCRIPTION EQUALS . STRING additionals_for_sound

    STRING          shift and go to state 60


state 51

    (23) additionals_for_sound -> SEPARATOR KEY KEY_VALUE . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 61
    empty                          shift and go to state 28

state 52

    (25) additionals_for_rest -> SEPARATOR SOUND_DURATION additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 25 (additionals_for_rest -> SEPARATOR SOUND_DURATION additionals_for_sound .)


state 53

    (26) additionals_for_rest -> SEPARATOR CLEF CLEF_VALUE . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 62
    empty                          shift and go to state 28

state 54

    (27) additionals_for_rest -> SEPARATOR DESCRIPTION EQUALS . STRING additionals_for_sound

    STRING          shift and go to state 63


state 55

    (28) additionals_for_rest -> SEPARATOR KEY KEY_VALUE . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 64
    empty                          shift and go to state 28

state 56

    (18) additionals_for_sound -> SEPARATOR CLEF CLEF_VALUE additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 18 (additionals_for_sound -> SEPARATOR CLEF CLEF_VALUE additionals_for_sound .)


state 57

    (19) additionals_for_sound -> SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 19 (additionals_for_sound -> SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound .)


state 58

    (20) additionals_for_sound -> SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 20 (additionals_for_sound -> SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound .)


state 59

    (21) additionals_for_sound -> SEPARATOR LYRICS EQUALS STRING . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 65
    empty                          shift and go to state 28

state 60

    (22) additionals_for_sound -> SEPARATOR DESCRIPTION EQUALS STRING . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 66
    empty                          shift and go to state 28

state 61

    (23) additionals_for_sound -> SEPARATOR KEY KEY_VALUE additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 23 (additionals_for_sound -> SEPARATOR KEY KEY_VALUE additionals_for_sound .)


state 62

    (26) additionals_for_rest -> SEPARATOR CLEF CLEF_VALUE additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 26 (additionals_for_rest -> SEPARATOR CLEF CLEF_VALUE additionals_for_sound .)


state 63

    (27) additionals_for_rest -> SEPARATOR DESCRIPTION EQUALS STRING . additionals_for_sound
    (16) additionals_for_sound -> . empty
    (17) additionals_for_sound -> . SEPARATOR SOUND_DURATION additionals_for_sound
    (18) additionals_for_sound -> . SEPARATOR CLEF CLEF_VALUE additionals_for_sound
    (19) additionals_for_sound -> . SEPARATOR ARTICULATION ARTICULATION_VALUE additionals_for_sound
    (20) additionals_for_sound -> . SEPARATOR DYNAMICS DYNAMICS_VALUE additionals_for_sound
    (21) additionals_for_sound -> . SEPARATOR LYRICS EQUALS STRING additionals_for_sound
    (22) additionals_for_sound -> . SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound
    (23) additionals_for_sound -> . SEPARATOR KEY KEY_VALUE additionals_for_sound
    (29) empty -> .

    SEPARATOR       shift and go to state 29
    RIGHT_CURLY_BRACKET reduce using rule 29 (empty -> .)

    additionals_for_sound          shift and go to state 67
    empty                          shift and go to state 28

state 64

    (28) additionals_for_rest -> SEPARATOR KEY KEY_VALUE additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 28 (additionals_for_rest -> SEPARATOR KEY KEY_VALUE additionals_for_sound .)


state 65

    (21) additionals_for_sound -> SEPARATOR LYRICS EQUALS STRING additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 21 (additionals_for_sound -> SEPARATOR LYRICS EQUALS STRING additionals_for_sound .)


state 66

    (22) additionals_for_sound -> SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 22 (additionals_for_sound -> SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound .)


state 67

    (27) additionals_for_rest -> SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound .

    RIGHT_CURLY_BRACKET reduce using rule 27 (additionals_for_rest -> SEPARATOR DESCRIPTION EQUALS STRING additionals_for_sound .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 8 resolved using rule (after_create_bar -> TAB sounds_list)
WARNING: rejected rule (empty -> <empty>) in state 8
